<resources>
    <string name="app_name">freemon</string>
    <string name="main_comment">내 삶을 채워 줄\n작은 모임</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="do_login">로그인 하기</string>
    <string name="id_hit">아이디를 입력해 주세요.</string>
    <string name="password_hit">비밀변호를 입력해 주세요.</string>
    <string name="AuthorityPhoneNumber">전화번호 인증</string>
    <string name="IntroductionUse">이용 안내</string>
    <string name="IntroductionUseComment">어플을 이용하기 위해서는 아래 권한을 허용해 주세요.</string>
    <string name="AllowPhoneNumberComment">회원가입시 인증을 위해서만 사용됩니다</string>
    <string name="Allow">허용하기</string>
    <string name="PleaseAllowButtonClick">허용하기 버튼을 눌러주세요.</string>
    <string name="Camera">카메라</string>
    <string name="AllowCameraComment">사진 업로드를 위해 사용됩니다.</string>
    <string name="complete">완료</string>
    <string name="callFromForm">CALL_FROM_FORM</string>
    <string name="SetAuthority">권한 설정</string>
    <string name="next">다음</string>
    <string name="PhoneNumber">휴대전화 번호</string>
    <string name="joinPhoneNumber">휴대전화 본인인증</string>
    <string name="joinProfile">프로필</string>
    <string name="joinPhoneNumberComment"></string>
    <string name="joinAgreeComment">정보제공 동의</string>
    <string name="joinProfileComment">프로필</string>
    <string name="AskAuthorityCode">인증번호요청</string>
    <string name="join_agree_profile">서비스 이용약관</string>
    <string name="join_profile_agree">서비스 이용약관 동의 (필수)</string>
    <string name="join_agree_service">개인정보 취급방침</string>
    <string name="join_service_agree">개인정보 취급방침 동의 (필수)</string>
    <string name="check">확인</string>
    <string name="do_join">새로운 계정 만들기</string>
    <string name="login_findUserInfo">계정 찾기</string>
    <string name="join_phoneAuth_phoneHint">휴대전화 번호를 입력해 주세요.</string>
    <string name="join_phoneAuth_comment">인증 요청 후, 1분 이내에 문자가 발송됩니다. 잠시 기다려주세요.</string>
    <string name="join_phoneAuth_checkSmsCode">인증</string>
    <string name="join_phoneAuth_checkSmsCodeHint0">인증 코드를 입력해주세요.</string>
    <string name="join_agree_title">이용약관에 동의해주세요.</string>
    <string name="join_agree_allAgree">모두 동의합니다.</string>
    <string name="join_agree_allAgreeComment">아래 항목에 대한 모든 동의가 포함되어 있습니다.
필수 항목에 대한 동의를 거부하는 경우 서비스 이용이 불가능 합니다.</string>
    <string name="join_agree_see">보기</string>
    <string name="join_agree_next">동의하고 계속 진행합니다.</string>
    <string name="join_phoneAuth_title">전화번호 인증</string>
    <string name="join_phoneAuth_titleComment">본인 인증 용도로만 사용 됩니다.</string>
    <string name="profile_title">프로필 작성</string>
    <string name="profile_nickName">닉네임</string>
    <string name="profile_gender">성별</string>
    <string name="profile_berth">생년월일</string>
    <string name="profile_introduction">자기소개</string>
    <string name="profile_city">사는 곳</string>
    <string name="profile_interested_city">관심 지역</string>
    <string name="profile_account_question">질문</string>
    <string name="profile_account_answer">답변</string>
    <string name="profile_men">남성</string>
    <string name="profile_women">여성</string>
    <string name="join_agree_profileContent">
"회사 개인정보 취급방침
감자(이하 "회사")는 개인정보보호 규정을 준수하며, 관련 법령에 의거한 개인정보취급방침을 정하여 이용자 권익 보호에 최선을 다하고 있습니다.
본 개인 정보 보호 정책은 귀하의 정보에 관한 수집, 사용 및 정보 공개에 대한 회사의 정책과 절차를 설명합니다.
귀하는 본 서비스를 사용함으로서 정보의 수집, 전송, 조작, 저장, 공개 및 본 개인 정보 보호 정책에 명시된 귀하의 정보를 제공하는 것에 대해 동의하게 됩니다. 귀하의 거주 국가나 정보의 출처에 관계 없이, 귀하의 정보는 서비스가 운영되는 다른 모든 국가에서 사용될 수 있습니다.
1. 수집하는 개인정보의 항목 및 수집방법
가. 수집하는 개인정보의 항목
첫째, 회사는 회원가입, 원활한 고객상담, 각종 서비스의 제공을 위해 최초 회원가입 당시 아래와 같은 개인정보를 수집하고 있습니다.
이용자의 전화번호, 이용자의 전화기 주소록내에 저장된 제3자의 전화번호, 기기고유번호 (디바이스 아이디 또는 IMEI)
둘째, 서비스 이용과정에서 아래와 같은 정보들이 생성되어 수집될 수 있습니다.
회사 서비스 이용자 이름, 사진, 생년월일, 지역, 성별, 아이디, 관심사, 소개문구, 가입한 모임, 홈페이주소, 페이스북주소, 트위터주소, 이메일주소, 트래픽 데이터, 쿠키, 방문 일시, 운영체제 정보, 서비스 이용 기록, 불량 이용 기록
나. 개인정보 수집방법
회사는 다음과 같은 방법으로 개인정보를 수집합니다.
- 회사 프로그램을 실행 또는 사용함으로써 자동으로 수집
- 서비스 가입이나 사용 중 이용자의 자발적 제공을 통한 수집
2.개인정보의 수집 및 이용 목적
가. 회사 서비스 기본 기능의 제공
- 회사은 무선네트워크 환경에서도 빠른 서비스를 제공하기 위해 회원의 공개된 정보를 자동으로 스마트폰에 캐싱하고 변경사항 또한 동기화합니다. 이를 원치 않으시면 회사 서비스를 이용하시면 안됩니다.
- 회원이 변경 또는 삭제한 정보는 회사 서버에 반영됩니다. 다만, 제3자의 스마트폰 또는 모바일 디바이스에 캐싱된 정보는 변경 또는 삭제되지 않을 수 있습니다.
- 회사은 이용자의 전화번호 및 이용자의 전화기 내의 전화번호부에 저장되어 있는 제3자의 전화번호를 수집,이용하여 자동친구 등록같은 회사의 서비스를 제공합니다. 또한 회사 이용자의 가입시에 기기고유번호 (디바이스 아이디 또는 IMEI)를 수집하고 저장하여 이용자의 전화번호와 조합하여 개인식별을 위한 회사 계정으로 사용하게 됩니다.
- 회사은 다른 사람들을 쉽게 찾고 교류할 수 있도록 설계되었습니다. 이 때문에 회원님의 모든 프로필 정보는 누구에게나 공개되고 검색, 추천될 수 있습니다. 공개하는 것이 불편한 하거나 노출에 위험이 있는 내용은 프로필에 등록하지 않으셔야 합니다.
- 회사은 사용자들 간에 서로 추천을 주고 받기 위해 디바이스에 캐싱된 다른 회원의 공개된 정보를 검색하여 서버로 전송할 수 있습니다.
나. 서비스 제공에 관한 계약 이행 및 서비스 제공에 따른 요금정산
유료 서비스 및 컨텐츠 제공, 특정 맞춤 서비스 제공, 물품배송 또는 청구서 등 발송, 본인인증, 구매 및 요금 결제, 요금추심
다. 회원관리
회원제 서비스 이용 및 제한적 본인 확인제에 따른 본인확인, 개인식별, 불량회원(회사 운영수칙을 위반하여 계약해지된 영구이용정지 회원)의 부정 이용방지와 비인가 사용방지, 가입의사 확인, 가입 및 가입횟수 제한, 만14세 미만 아동 개인정보 수집 시 법정 대리인 동의여부 확인, 추후 법정 대리인 본인확인, 법령이나 이용약관을 위반하여 발생하는 분쟁 조정을 위한 기록보존, 불만처리 등, 고지사항 전달
라. 신규 서비스 개발 및 마케팅·광고 활용
신규 서비스 개발 및 맞춤 서비스 제공, 통계학적 특성에 따른 서비스 제공 및 광고 게재, 서비스의 유효성 확인, 이벤트 및 광고성 정보 제공 및 참여기회 제공, 회원의 서비스 이용에 대한 통계와 분석
3. 개인정보의 보호 및 제공
- 회사는 이용자가 별도로 동의하지 않는 경우를 제외하고는 이용자의 개인정보를 위에서 언급한 목적 범위를 초과하여 이용하거나 제3자에게 제공 또는 공유하지 않습니다. 다만, 아래의 경우는 예외로 합니다.
가. 서비스에 제3자의 서비스가 연결되어 제공될 경우 회사는 서비스 이용을 위해 필요한 범위 내의 제공에 대하여 이용자의 동의를 얻은 경우
나. 법령의 규정에 의거 하거
나. 수사 목적으로 법령에 정해진 절차와 방법에 따라 수사기관의 요구가 있는 경우
4. 개인정보의 취급위탁
- 온라인 결제서비스 제공을 위해 전자금융업자가 공급하는 전산솔루션과의 연동 및 관리에 필요한 전산시스템 제공 : (주)시옷
5. 개인정보의 보유 및 이용기간
이용자의 개인정보는 원칙적으로 개인정보의 수집 및 이용목적이 달성되면 지체 없이 파기합니다. 단, 다음의 정보에 대해서는 아래의 이유로 명시한 기간 동안 보존합니다.
가. 회사 내부 방침에 의한 정보보유 사유
- 부정이용기록
보존 이유 : 부정 이용 방지
보존 기간 : 1년
나. 관련법령에 의한 정보보유 사유
상법, 전자상거래 등에서의 소비자보호에 관한 법률 등 관계법령의 규정에 의하여 보존할 필요가 있는 경우 회사는 관계법령에서 정한 일정한 기간 동안 회원정보를 보관합니다. 이 경우 회사는 보관하는 정보를 그 보관의 목적으로만 이용하며 보존기간은 아래와 같습니다.
- 계약 또는 청약철회 등에 관한 기록
보존 이유 : 전자상거래 등에서의 소비자보호에 관한 법률
보존 기간 : 5년
- 대금결제 및 재화 등의 공급에 관한 기록
보존 이유 : 전자상거래 등에서의 소비자보호에 관한 법률
보존 기간 : 5년
- 소비자의 불만 또는 분쟁처리에 관한 기록
보존 이유 : 전자상거래 등에서의 소비자보호에 관한 법률
보존 기간 : 3년
- 본인확인에 관한 기록
보존 이유 : 정보통신망 이용촉진 및 정보보호 등에 관한 법률
보존 기간 : 6개월
- 방문에 관한 기록
보존 이유 : 통신비밀보호법
보존 기간 : 3개월
6. 개인정보 파기절차 및 방법
이용자의 개인정보는 원칙적으로 개인정보의 수집 및 이용목적이 달성되면 지체 없이 파기합니다. 회사의 개인정보 파기절차 및 방법은 다음과 같습니다.
가. 파기절차
- 이용자가 회원가입 등을 위해 입력한 정보는 목적이 달성된 후 별도의 DB로 옮겨져 내부 방침 및 기타 관련 법령에 의한 정보보호 사유에 따라(보유 및 이용기간 참조)일정 기간 저장된 후 파기됩니다.
- 동 개인정보는 법률에 의한 경우가 아니고서는 보유되는 이외의 다른 목적으로 이용되지 않습니다.
나. 파기방법
- 종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기합니다.
- 전자적 파일 형태로 저장된 개인정보는 기록을 재생할 수 없는 기술적 방법을 사용하여 삭제합니다.
7. 이용자의 권리 보호
- 이용자(만 14세 미만의 아동인 경우 법정대리인)는 언제든지 개인정보를 조회하거나 수정할 수 있으며 가입해지를 요청할 수도 있습니다.
- 이용자(만 14세 미만의 아동인 경우 법정대리인)의 개인정보 조회, 수정을 위해서는 서비스내 "내 프로필" 변경을, 가입해지를 위해서는 서비스내 "탈퇴하기"를 클릭하여 직접 탈퇴가 가능합니다.
- 개인정보보호책임자에게 서면, 전화 또는 이메일로 연락하시면 지체없이 조치하겠습니다.
- 회사는 이용자 혹은 법정 대리인의 요청에 의해 해지 또는 삭제된 개인정보는 "5. 개인정보의 보유 및 이용기간"에 명시된 바에 따라 처리하고 그 외의 용도로 열람 또는 이용할 수 없도록 처리하고 있습니다.
8. 개인정보 자동 수집 장치의 설치/운영 및 거부에 관한 사항
- 회사는 계정정보를 생성하기 위해 이용자가 회사 프로그램을 실행시 기기식별번호 (디바이스 아이디 또는 IMEI)를 자동으로 수집하게 됩니다. 또한 친구자동등록의 기본기능을 제공하기 위하여 이용자의 전화기 내의 전화번호부에 저장되어 있는 제3자의 전화번호를 자동으로 수집하게 됩니다.
- 이용자가 기기식별번호를 자동으로 수집하는 것을 거부하는 경우 서비스를 이용할 수 없습니다.
9. 고지의 의무
회사는 법률이나 서비스의 변경사항을 반영하기 위한 목적 등으로 개인정보 취급 방침을 수정할 수 있습니다. 개인정보취급방침의 내용 추가, 삭제 및 수정이 있을 시에는 시행일자 최소 7일전부터 회사의 웹사이트 http://friendscube.com 및 회사 서비스내 "공지사항" 을 통해 고지할 것입니다.
10. 개인정보보호책임자 및 담당자의 연락처
귀하께서는 회사의 서비스를 이용하시면서 발생하는 모든 개인정보보호 관련 민원을 개인정보보호책임자 혹은 담당부서로 신고하실 수 있습니다. 회사의 고객센터 이메일 : help@friendscube.com로 문의해주시면 신고사항에 대해 충분한 답변을 드리기 위해 최선을 다하겠습니다.
- 개인정보 보호책임자
이름 : 이호석
직위 : 개발책임
소속 : 감자
연락처 : 고객센터
11. 개인정보취급방침의 개정과 그 공지
- 현 개인정보취급방침이 추가 및 삭제, 수정이 있을 시에는 시행 7일 전에 서비스 내 공지 또는 웹사이트를 통해 사전 공지하며, 사전 공지가 곤란한 경우 지체 없이 공지할 수 있습니다. 이 정책은 아래 시행일자부터 시행됩니다.
- 시행일: 2017년 03월 13일

"</string>
</resources>