<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.LoginActivity"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="40dp"
    android:paddingBottom="20dp">


    <TextView
        android:id="@+id/join_authPhone_txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="23sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/join_authProfile_txtNickName"
        android:text="@string/profile_nickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/join_authPhone_txtTitle"
        />
    <EditText
        android:id="@+id/join_authProfile_editTxtNickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textAlignment="textStart"
        android:theme="@style/editTextStyle"
        android:hint="@string/profile_nickName"
        app:layout_constraintTop_toBottomOf="@+id/join_authProfile_txtNickName"
        />

    <TextView
        android:id="@+id/join_authProfile_gender"
        android:text="@string/profile_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_gravity="center"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/join_authProfile_editTxtNickName"/>

    <RadioGroup
        android:id="@+id/join_authProfile_RadioGrpgender"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/join_authProfile_gender">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_women"
            android:layout_weight="0.5"
            android:textSize="11sp"
            android:buttonTint="@color/mainYellow"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_men"
            android:layout_weight="0.5"
            android:textSize="11sp"
            android:buttonTint="@color/mainYellow"/>
    </RadioGroup>

    <TextView
        android:id="@+id/join_authProfile_txtBerth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_berth"
        android:textSize="13sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="3dp"
        app:layout_constraintTop_toBottomOf="@+id/join_authProfile_RadioGrpgender"
        />
    <EditText
        android:id="@+id/join_authProfile_editTxtBerth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textAlignment="textStart"
        android:theme="@style/editTextStyle"
        app:layout_constraintTop_toBottomOf="@+id/join_authProfile_txtBerth"
        />

    <TextView
        android:id="@+id/join_authProfile_txtIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_introduction"
        android:textSize="13sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="3dp"
        app:layout_constraintTop_toBottomOf="@+id/join_authProfile_editTxtBerth"
        />
    <EditText
        android:id="@+id/join_authProfile_editTxtIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textAlignment="textStart"
        android:theme="@style/editTextStyle"
        app:layout_constraintTop_toBottomOf="@+id/join_authProfile_txtIntro"
        />

    <TextView
        android:id="@+id/join_authProfile_txtInerestedCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_interested_city"
        android:textSize="13sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="3dp"
        app:layout_constraintTop_toBottomOf="@+id/join_authProfile_editTxtIntro"
        />
    <EditText
        android:id="@+id/join_authProfile_editTxtInterestedCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textAlignment="textStart"
        android:theme="@style/editTextStyle"
        app:layout_constraintTop_toBottomOf="@+id/join_authProfile_txtInerestedCity"
        />

    <TextView
        android:id="@+id/join_authProfile_txtAccountQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_account_question"
        android:textSize="13sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="3dp"
        app:layout_constraintTop_toBottomOf="@+id/join_authProfile_editTxtInterestedCity"
        />

    <EditText
        android:id="@+id/join_authProfile_editTxtAccountQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textAlignment="textStart"
        android:theme="@style/editTextStyle"
        app:layout_constraintTop_toBottomOf="@+id/join_authProfile_txtAccountQuestion"
        />

    <TextView
        android:id="@+id/join_authProfile_txtAccountAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_account_answer"
        android:textSize="15sp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/join_authProfile_editTxtAccountQuestion"
        />
    <EditText
        android:id="@+id/join_authProfile_editTxtAccountAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textAlignment="textStart"
        android:theme="@style/editTextStyle"
        app:layout_constraintTop_toBottomOf="@+id/join_authProfile_txtAccountAnswer"
        />

    <Button
        android:id="@+id/join_authPhone_btnNext"
        android:background="@drawable/button_round_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>