<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/join_frag_agree"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="60dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/join_agree_txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/custom_font_family"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/join_agree_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/joing_authPhone_linearlayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="17dp"
        app:layout_constraintTop_toBottomOf="@+id/join_agree_txtTitle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/join_agree_profile_caption"
            android:textSize="17sp"
            />

        <CheckBox
            android:id="@+id/frag_join_agreement_allAllow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/join_agree_allAgree"/>
        <TextView
            android:id="@+id/frag_join_agree_allAllow_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/join_agree_allAgreeComment"
            android:paddingLeft="20dp"
            android:layout_marginBottom="20dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/frag_join_agree_allowProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_service_agree"
                app:layout_constraintLeft_toLeftOf="parent"
                android:button="@drawable/custom_checkbox"/>

            <Button
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:text="@string/join_agree_see"
                android:layout_gravity="right"
                app:layout_constraintRight_toRightOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/frag_join_agree_allowService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_service_agree"
                app:layout_constraintLeft_toLeftOf="parent"
                android:button="@drawable/custom_checkbox"/>

            <Button
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:text="@string/join_agree_see"
                android:layout_gravity="right"
                app:layout_constraintRight_toRightOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>