<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.LoginActivity"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="40dp"
    android:paddingBottom="40dp"
    >

        <TextView
            android:id="@+id/auth_txtTile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntroductionUse"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="23sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/auth_txtSubTile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntroductionUseComment"
            android:textAlignment="center"
            android:textSize="13sp"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/auth_txtTile"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/auth_txtSubTile"/>

        <Button
            android:id="@+id/auth_btnAllow"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:text="@string/Allow"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:background="@drawable/button_round_border"
            android:layout_marginBottom="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>